kotlin-parser/src/test/semlang/validatorTests/fail/nameConflict3.sem

// Conflict with a native struct
struct Unicode.String {
    foo: Integer
}
